--- a/src/Components/ProfileDetailsPage/PDPpage.css
+++ b/src/Components/ProfileDetailsPage/PDPpage.css
@@ -25,7 +25,10 @@
   height: 70vh;
   width: 80%;
   padding: 60px 100px;
-  border-bottom: 10px solid #07baf3;  
+  border-bottom: 10px solid transparent;  
+  background: 
+    linear-gradient(#fff, #fff) padding-box,
+    linear-gradient(205deg, #07baf3, #1703a9) border-box;
 }
 .vertical-line-pdp {
   border: 1px solid #5ac501;
@@ -168,6 +171,13 @@
   padding-bottom: 4%;
   padding-right:4%;
 }
+.exp-border{
+   background: 
+    linear-gradient(#fff, #fff) padding-box,
+    linear-gradient(205deg, #07baf3, #1703a9) border-box;
+    border : 3px solid #ffffff54;
+}
+
 .pdp-sub li {
   margin-top: 12px;
   font-size: 15px;
