--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1213,6 +1213,7 @@ li:hover .career-reboot-heading {
   .dropdown-menu {
     padding: 1rem !important;
   }
+  
 }
 @media only screen and (min-width: 768px) and (max-width: 992px) {
   .navbar-nav .nav-link {
@@ -1272,6 +1273,34 @@ li:hover .career-reboot-heading {
   .dropdown-menu {
     padding: 1rem !important;
   }
+
+    .menu-campus-custom-menu {
+    height: 80vh !important;
+    left: -240% !important;
+  }
+.navbar-nav > .dropdown .cam-drop-dropdown-menu{
+  max-width: 900px !important;
+  width: 0;
+}
+.navbar-nav > .dropdown:hover .cam-drop-dropdown-menu {
+  width: 100vw !important;
+}
+.campus-text-right{
+  font-size: 0.9rem !important;
+}
+.campus-text-right-name{
+  font-size: 0.7rem !important;
+}
+.menu-campus-image{
+  height: 25vh !important;
+}
+.menu-item-campus-card{
+  height: 33vh !important;
+  width: 48%;
+}
+.menu-campus-card{
+    padding: 0 0 !important;
+}
 }
 @media only screen and (min-width: 992px) and (max-width: 1024px) {
   .navbar-nav .nav-link {
@@ -1281,9 +1310,10 @@ li:hover .career-reboot-heading {
   }
   .menu-campus-custom-menu {
     height: 80vh !important;
+    left: -280% !important;
   }
 .navbar-nav > .dropdown .cam-drop-dropdown-menu{
-  max-width: 1200px !important;
+  max-width: 900px !important;
   width: 0;
 }
 .navbar-nav > .dropdown:hover .cam-drop-dropdown-menu {
@@ -1292,7 +1322,19 @@ li:hover .career-reboot-heading {
 .campus-text-right{
   font-size: 0.9rem !important;
 }
-
+.campus-text-right-name{
+  font-size: 0.7rem !important;
+}
+.menu-campus-image{
+  height: 28vh;
+}
+.menu-item-campus-card{
+  height: 33vh !important;
+  width: 48%;
+}
+.menu-campus-card{
+    padding: 0 0 !important;
+}
   .online-program-link {
     padding: 0.5rem 0.2rem !important;
     font-size: 0.3rem !important;
@@ -1464,7 +1506,7 @@ li:hover .career-reboot-heading {
 /* ⭐ Custom Design for Campus Placement Dropdown */
 .menu-campus-custom-menu {
   height: 100vh;
-  left: -240% !important;
+  left: -240%;
 background: linear-gradient(to right, #ffffff, #d8f6c2)  !important;
 
   border-radius: 10px;
