--- a/src/Pages/PgprogramPage/pgTabs/Curriculum/Curriculum.css
+++ b/src/Pages/PgprogramPage/pgTabs/Curriculum/Curriculum.css
@@ -69,7 +69,7 @@ img.img-fluid {
     margin: 0 auto;
     width: 80%;
     max-height: 400px;
-    border-radius: 0;
+    border-radius: 8px;
     object-fit: cover;
     object-position: center center;
 }
@@ -190,16 +190,15 @@ img.img-fluid {
 }
 .Summer-Internship-head{
   width: 100%;
-  height: 50px;
+  padding: 20px;
   border-radius: 5px;
-  text-align: center;
-  background: linear-gradient(205deg, rgb(7, 186, 243)  1% , rgb(23, 3, 169) 100%) !important;
+  background: linear-gradient(105deg, rgb(7, 186, 243)  1% , rgb(23, 3, 169) 100%) !important;
   color: white !important;
   font-weight: 600;
   margin: auto;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 /* ===== Responsive for Mobile Only ===== */
