--- a/src/Pages/PgprogramPage/pgTabs/OverviewTab/OverviewKeyhighlights.css
+++ b/src/Pages/PgprogramPage/pgTabs/OverviewTab/OverviewKeyhighlights.css
@@ -57,7 +57,7 @@
 
 /* title & paragraph */
 .content-title {
-  color: #005bd4;
+  color: #0c0c0c;
   margin-bottom: 1rem;
   font-weight: 600;
 }
@@ -231,24 +231,45 @@
 .swiper-pagination-bullet-active {
   background: #000; /* active dot color */
 }
+.participant-image-wrapper {
+  position: relative;
+  width: 100%;
+}
 .participant-play-thumbnail{
   position: relative;
   width: 100%;
-  height: 70vh;
+  height: 50vh;
   object-fit: cover;
+  object-position: top;
   border-radius: 10px;
 }
-.participant-play-icon{
+.participant-play-icon {
   position: absolute;
-  bottom: 20%;
-  left: 10%;
-  background-color: #5ac501;
+  bottom: 15px;   /* distance from bottom */
+  left: 15px;     /* distance from left  */
+  width: 45px;
+  height: 45px;
+  background: linear-gradient(135deg, #07baf3, #1703a9);
   color: white;
   border-radius: 50%;
-  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 5;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
+
+.participant-play-icon:hover {
+  transform: scale(1.08);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+} 
 
 .video-modal-i-frame{
   width:1000px;
   height: 550px;
+}
+
+.play-btn-container {
+
 }
