--- a/src/Pages/PgprogramPage/pgTabs/PlacementTab/PlacementTab.css
+++ b/src/Pages/PgprogramPage/pgTabs/PlacementTab/PlacementTab.css
@@ -12,14 +12,28 @@
 .placement-btns-intern{
     width: 100%;
     background-color: white;
-    color: black;
-    border: 1px solid black;
+    color: rgb(71, 71, 71);
+    border: 1px solid rgb(156, 156, 156);
     border-radius: 5px;
 }
 .placement-btns-intern.active {
   background: #5ac501;
   color: white;
   border: none;
+  position: relative;
+}
+.placement-btns-intern.active::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -8px;            /* adjust arrow position */
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-top: 8px solid #5ac501;  /* arrow color */
 }
 
 .placement-table {
@@ -79,9 +93,18 @@
 }
 .press-note-btn{
   background-color: #5ac501;
+  cursor: pointer;
+  border:1px solid #5ac501;
   color: white;
   padding: 1rem;
+  border-radius: 5px;
   margin: 0;
+  transition: all .4s ease-in-out;
+}
+.press-note-btn:hover{
+   background-color: #d2ffac;
+   border:1px solid #5ac501;
+   color: #555;
 }
 .border-css{
   border-bottom: 1px solid white;
@@ -91,7 +114,8 @@
 .highlight-box{
   background-color: #1703a9;
   color: white;
-  padding: 3rem;
+  border-radius: 10px;
+  /* padding: 3rem; */
 }
 
 .recruiter-card {
