--- a/src/Pages/CampusPlacementsPage/CampusPlacementsPage.css
+++ b/src/Pages/CampusPlacementsPage/CampusPlacementsPage.css
@@ -32,7 +32,7 @@
   text-align: center;
   background: linear-gradient(205deg, rgb(7, 186, 243) 1%, rgb(23, 3, 169) 100%) !important;
   color: white;
-  /* border-bottom: 4px solid #5ac501; */
+  /* border-bottom: 4px solid #0c0142; */
   padding-bottom: 0.5rem;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
@@ -78,30 +78,38 @@
   flex: 1;
   font-size: 0.7rem;
   margin: 0 4px;
-  border-radius: 8px;
+  border-radius: 4px;
   transition: all 0.3s ease;
 }
 
 /* Button styles */
 .Cpp-full-buttons button:first-child {
-  background-color: #5ac501;
+  background-color: #0c0142;
   color: white;
   border: none;
+  transition: all 0.4s ease-in-out;
 }
 
 .Cpp-full-buttons button:first-child:hover {
-  background-color: #5ac501;
+  background-color: #fff;
+  color: #0c0142;
+  border: 1px solid #0c0142;
+  box-shadow: 0px 10px 8px #0c01421e;
+  transform: translateY(-4px);
 }
 
 .Cpp-full-buttons button:last-child {
   background-color: #fff;
-  color: #5ac501;
-  border: 1px solid #5ac501;
+  color: #0c0142;
+  border: 1px solid #0c0142;
+  transition: all 0.4s ease-in-out;
 }
 
 .Cpp-full-buttons button:last-child:hover {
-  background-color: #5ac501;
+  background-color: #0c0142;
   color: #fff;
+  box-shadow: 0px 10px 8px #0c01421e;
+  transform: translateY(-4px);
 }
 
 
@@ -160,7 +168,7 @@
 }
 
 .Cpp-req-content h2 {
-  color: #5ac501;
+  color: #0c0142;
   margin-bottom: 0.5rem;
 }
 
@@ -177,17 +185,17 @@
 }
 
 .Cpp-tab-buttons .btn-primary {
-  background-color: #5ac501;
+  background-color: #5bc500;
   border: none;
 }
 
 .Cpp-tab-buttons .btn-outline-primary {
-  border-color: #5ac501;
-  color: black;
+  border-color: #5bc500;
+  color: #5bc500;
 }
 
 .Cpp-tab-buttons .btn-outline-primary:hover {
-  background-color: #5ac501;
+  background-color: #5bc500;
   color: #fff;
 }
 
@@ -220,7 +228,7 @@
 .cpp-mindmap-vertical-line {
   position: relative;
   width: 4px;
-  background-color: #ccc;
+  background-color: #eff3eb;
   height: 100%;
   border-radius: 100px;
   margin-right: 20px;
