--- a/src/Pages/FaculityPage/FaculityHero/FaculityHero.css
+++ b/src/Pages/FaculityPage/FaculityHero/FaculityHero.css
@@ -26,4 +26,9 @@
     font-weight: 300 !important;
   }
   }
+  @media (max-width: 480px) {
+    .fac-hero-section{
+      min-height: 40vh !important;
+    }
+  }
   
