--- a/src/Pages/CampusPage/CampusPage.css
+++ b/src/Pages/CampusPage/CampusPage.css
@@ -78,10 +78,13 @@
 .captital-campus-content-sec{
     padding: 0 8%;
 }
-.campus-choose-data-image{
+.campus-choose-data-image {
     width: 60px;
     height: 60px;
+    filter: brightness(0) saturate(100%) invert(28%) sepia(87%) saturate(2000%) hue-rotate(210deg) brightness(95%) contrast(90%);
 }
+
+
 .campus-choose-item {
     padding-bottom: 2%; /* space for the line */
     border-bottom: 1px solid #ccc; /* vertical line */
