--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -261,11 +261,13 @@
   .hero-image::before {
     display: none;
   }
+
 }
 @media screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
   .hero-section-data-div {
     flex-direction: column-reverse;
   }
+
 
   .hero-section-left {
     width: 100%;
@@ -295,13 +297,14 @@
 
   .hero-image {
     width: 100%;
+    height: 100%;
     min-height: 200px;
   }
 
   .hero-image img {
-    height: auto;
+    height: 100% !important;
     width: 100%;
-    object-fit: contain;
+    object-fit: cover !important;
   }
 
   .custom-prev,
