--- a/src/Pages/Consortium/Consortium.css
+++ b/src/Pages/Consortium/Consortium.css
@@ -205,6 +205,8 @@
 @media (max-width:480px) {
     .consortium-leader-image{
         height: 30vh;
+        width: 70%;
+        margin: auto;
     }
     .consortium-founder-image{
         position: relative;
@@ -239,5 +241,10 @@
         height: 30vh;
         width: 100%;
         object-fit: cover;
+    }
+    .consortium-pillars-container{
+        width: 95%;
+        margin: auto;
+        border-radius: 10px;
     }
 }
