--- a/src/Pages/CareersPage/CareersPage.css
+++ b/src/Pages/CareersPage/CareersPage.css
@@ -125,14 +125,31 @@ background: rgba(0, 0, 0, 0.6);
 }
 @media (max-width:480px) {
     .cpo-data-para{
-        bottom: -5%;
+        bottom: -7%;
         width: 100%;
     }
     .connect-section{
         padding: 30px 20px;
+        border-radius: 10px;
+    }
+    .connect-section::before{
+        border-radius: 10px;
     }
     .cw-right-image{
         width: 100%;
         height: 30vh;
+    }
+    .cpo-data-div img{
+        height: 35vh;
+    }
+    .cpo-data-para{
+        height: fit-content;
+        padding: 3%;
+    }
+    .cpb-data-grid{
+        padding: 8%;
+    }
+    .cpo-contact-details{
+        height: fit-content;
     }
 }
