--- a/src/Pages/MediaGallery/MediaGallery.css
+++ b/src/Pages/MediaGallery/MediaGallery.css
@@ -93,4 +93,7 @@
     .mga-grid{
         grid-template-columns: repeat(1,1fr);
     }
+    .media-play-thumbnail{
+      height: 34vh !important;
+    }
 }
