worked on careers page

--- a/src/Pages/Media/MediaPage.css
+++ b/src/Pages/Media/MediaPage.css
@@ -35,4 +35,8 @@
     .ucu-event-page-image{
         height: 30vh !important;
     }
+    .med-image{
+        height: 30vh;
+        object-fit: cover;
+    }
 }
