worked on careers page

--- a/src/Pages/CampusPlacementsPage/CampusPlacementsPage.css
+++ b/src/Pages/CampusPlacementsPage/CampusPlacementsPage.css
@@ -314,4 +314,28 @@
     grid-template-columns: repeat(1, 1fr);
     padding: 0 5%;
   }
+  .founder-section{
+    padding: 1rem;
+    gap: 2rem;
+    border-radius: 10px;
+  }
+  .founder-name{
+    font-size: 1.8rem;
+  }
+  .founder-content{
+    margin: 0;
+  }
+  .cpp-mindmap-container{
+    flex-direction: column;
+    height: auto;
+  }
+  .cpp-mindmap-vertical-line{
+    display: none;
+  }
+  .cpp-mindmap-cards-container{
+    gap: 15px;
+  }
+  .cpp-mindmap-left-image{
+    height: 30vh;
+  }
 }
