--- a/src/Pages/PgprogramPage/pgTabs/OverviewTab/OverviewKeyhighlights.css
+++ b/src/Pages/PgprogramPage/pgTabs/OverviewTab/OverviewKeyhighlights.css
@@ -128,6 +128,19 @@
   width:350px !important;
   height: 250px !important;
 }
+.video-con-objectives{
+  height: 30vh !important;
+}
+.play-btn-container{
+  top: 85% !important;
+  left: 9% !important;
+}
+.aboutphil-container{
+  margin-bottom: 0 !important;
+}
+.participant-play-thumbnail{
+  height: 35vh !important;
+}
 }
 @media (max-width: 380px){
 .video-modal-i-frame{
