--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -45,7 +45,7 @@
   left: 0;
   height: 2px;
   width: 0;
-  background: #74e974;
+  background: #0d6efd;
   transition: width 0.3s ease;
 }
 
@@ -913,7 +913,7 @@ li:hover .career-reboot-heading {
 }
 
 .search-icon-nab-bg {
-  background-color: #005bd4;
+  background-color: #5ac501;
   color: white;
   border-radius: 50%;
   padding: 7px 8px;
@@ -921,7 +921,7 @@ li:hover .career-reboot-heading {
 }
 
 .profile-icon-nab-bg {
-  background-color: #005bd4;
+  background-color: #5ac501;
   color: white;
   border-radius: 50%;
   padding: 8px;
@@ -956,7 +956,8 @@ li:hover .career-reboot-heading {
 
 .online-program-link {
   font-weight: 600;
-  background-color: #005bd4;
+  border-radius: 8px;
+  background-color: #5ac501;
   color: white !important;
   position: relative;
   padding: 0.8rem 2rem;
