--- a/src/index.css
+++ b/src/index.css
@@ -160,3 +160,7 @@ p{
  font-family: 'GothamBold' !important;
  font-weight: 600 !important;
 }
+.logo-text-under{
+   font-family: 'GothamBold' !important;
+ font-weight: 600 !important;
+}
