menu bg design changes

--- a/src/Components/Navbar/NavbarNew.css
+++ b/src/Components/Navbar/NavbarNew.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #ffca00;
+  background: #004aad;
   color: #111;
   padding: 1rem;
   position: relative;
