menu bg design changes

--- a/src/Pages/Media/MediaPage.css
+++ b/src/Pages/Media/MediaPage.css
@@ -1,6 +1,15 @@
 .ucu-media-page-card {
-    background: linear-gradient(205deg, rgb(7, 186, 243) 1%, rgb(23, 3, 169) 100%) !important;
-    color: white !important;
+    background: #fefefe !important;
+    border:1px solid #dbdbdb;
+    color: black !important;
+    box-shadow: -1px 4px 16px #0000003b !important;
+    border-radius: 13px !important;
+    cursor: pointer;
+    transition: all 0.4s ease-in-out;
+}
+.ucu-media-page-card:hover{
+    box-shadow:-1px 7px 16px #0000003b !important;
+    transform: translateY(-6px);
 }
 
 .med-route-bg {
