--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -915,7 +915,7 @@ li:hover .career-reboot-heading {
 }
 
 .bg-gradient{
-  background: linear-gradient(to right, #5de0e6, #004aad) !important;
+  background: linear-gradient(to right,#5de0e6,#004aad)!important;
 }
 .top-bar .dropdown-menu .dropdown-menu-col ul li a:hover {
   font-size: 0.75rem !important;
@@ -1547,7 +1547,13 @@ font-size: 0.8rem !important;
 .menu-campus-custom-menu {
   height: 100vh;
   left: -240%;
-background: linear-gradient(to right, #ffffff, #d8f6c2)  !important;
+background: linear-gradient(to right, #01266b, #6d58e4)  !important;
+    /* background: linear-gradient(to right, #25d366, #351edf) !important; */
+    /* background:url(https://img.freepik.com/free-vector/business-doodle-vector-meeting-background_53876-126544.jpg?t=st=1764412967~exp=1764416567~hmac=b326fe86c6636aae78aae7720b8f1deeb44aa700c82969e9aa4a9449fc60dd06&w=1060) !important;
+    background-position: center;
+    background-repeat: no-repeat !important;
+    background-size: contain !important;
+    background-color: #fff; */
 
   border-radius: 10px;
   box-shadow: 0 4px 20px rgba(0,0,0,0.1);
@@ -1568,7 +1574,7 @@ background: linear-gradient(to right, #ffffff, #d8f6c2)  !important;
 .menu-campus-title {
   font-size: 18px;
   font-weight: 700;
-  color: black;
+  color: rgb(255, 255, 255);
   text-align: center;
   position: relative;
   height: 20vh;
@@ -1593,8 +1599,9 @@ background: linear-gradient(to right, #ffffff, #d8f6c2)  !important;
 
 .menu-campus-card {
   text-decoration: none;
-  color: black;
+  color: rgb(10, 2, 82);
   font-weight: 600;
+  font-size: 15.5px !important;
   text-align: center;
   padding: 10px 0;
 }
@@ -1633,26 +1640,42 @@ background: linear-gradient(to right, #ffffff, #d8f6c2)  !important;
 .navbar-nav > .dropdown:hover .cam-drop-dropdown-menu {
   opacity: 1;
   visibility: visible;
-  width: 100vw;
-  max-height: 600px;
+  width: 95vw;
+  max-height: fit-content;
   /* enough to show content */
   padding: 2rem;
-  transform: translateX(-50%) translateY(0);
+  transform: translateX(-51%) translateY(0);
 }
 .menu-campus-image{
-  height: 28vh;
+  height: 18vh;
   width: 100%;
   object-fit: cover;
+  object-position: center;
     border-radius: 10px;
 }
+.menu-campus-image:last-child {
+  object-position: left;
+}
 .menu-item-campus-card{
-  height: 36vh;
+  height: auto;
   border-radius: 10px;
   cursor: pointer;
   justify-content: center;
   align-items: center;
-  width: 48%;
+  width: 24%;
+  transition: all 0.4s ease-in-out;
+}
+.menu-item-campus-card:hover{
+transform: translateY(-5px);
+box-shadow: 1px 4px 10px #00054b70;
+}
+.campus-text-right, .campus-text-right-name{
+  color: rgb(243, 246, 255);
+}
+.campus-text-right-name{
+  color: rgba(243, 246, 255, 0.904);
 }
 .cmapus-wrapper-div{
   width: 100%;
+  height: auto;
 }
