--- a/src/Components/FixedSideBar/FixedSideBar.css
+++ b/src/Components/FixedSideBar/FixedSideBar.css
@@ -18,7 +18,7 @@
   text-align: center;
   align-items: center;
   gap: 5px;
-  padding: 5px 0;
+  padding: 5px 2px;
   cursor: pointer;
   border-bottom: 1px solid #eee;
   font-weight: 500;
@@ -164,7 +164,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
+  font-size: 18px;
   transition: transform 0.3s ease, color 0.3s ease;
   animation: floatIcon 3s ease-in-out infinite;
 }
