--- a/src/Pages/ExecutiveeduPage/EEPage.css
+++ b/src/Pages/ExecutiveeduPage/EEPage.css
@@ -219,3 +219,49 @@
         flex-direction: column;
     }
 }
+
+
+.eep-tabs-container {
+  display: flex;
+  align-items: center;
+  position: relative;
+  background-color: #f5f5f5;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  margin: 20px auto;
+}
+
+.eep-tab-item {
+  flex: 1;
+  text-align: center;
+  padding: 10px 0;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 13px;
+  color: hsl(0, 0%, 33%);
+  transition: all 0.3s ease;
+}
+
+.eep-tab-item:hover {
+  background: #e0e0e0;
+}
+
+.eep-tab-item.active {
+  color: #fff;
+  font-weight: 500;
+  background-color: #1535b4;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.eep-tab-indicator {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 4px;
+  width: calc(100% / 9); /* 9 tabs */
+  background:  #5ac501;
+  border-radius: 4px 4px 0 0;
+  transition: transform 0.3s ease;
+}
