--- a/src/Pages/ExecutiveeduPage/EEPage.css
+++ b/src/Pages/ExecutiveeduPage/EEPage.css
@@ -780,3 +780,54 @@
     height: 260px;
   }
 }
+.eep-tabs-wrapper {
+    display: flex;
+    align-items: center;
+    width: 80%;
+    position: relative;
+    margin: 1% auto;
+}
+
+.eep-tab-arrow {
+    background: #5ac501;
+    border: none;
+    font-size: 22px;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 4px 12px;
+    z-index: 2;
+    border-radius: 5px;
+}
+
+.eep-tabs-scroll {
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    gap: 15px;
+    white-space: nowrap;
+    flex: 1;
+    padding: 5px 10px;
+}
+
+.eep-tabs-scroll::-webkit-scrollbar {
+    display: none;
+}
+
+.eep-tab-item {
+    padding: 10px 20px;
+    background: #f2f2f2;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: 500;
+    user-select: none;
+    transition: 0.3s;
+    white-space: nowrap;
+}
+
+.eep-tab-item.active {
+    background: #5ac501;
+    color: white;
+}
+.eep-tab-arrow.right{
+  margin-left: 10px;
+}
